<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addBudgetItemWindowDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_item_window_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addBudgetItemWindowDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBudgetItemWindowDateTextView" />

    <TextView
        android:id="@+id/addBudgetItemWindowValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_item_window_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBudgetItemWindowDateEditText" />

    <EditText
        android:id="@+id/addBudgetItemWindowValueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBudgetItemWindowValueTextView" />

    <Button
        android:id="@+id/addBudgetItemWindowDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_item_window_done_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBudgetItemWindowValueEditText" />

    <Button
        android:id="@+id/addBudgetItemWindowCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_item_window_cancel_button"
        app:layout_constraintEnd_toEndOf="@+id/addBudgetItemWindowValueEditText"
        app:layout_constraintTop_toBottomOf="@+id/addBudgetItemWindowValueEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>