<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/budgetConstraintLayout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budgetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/budgetRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/budgetRecyclerView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddBudgetItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetRecyclerView"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/RemoveBudgetItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AddBudgetItemButton"
        app:layout_constraintTop_toBottomOf="@+id/budgetRecyclerView"
        app:srcCompat="@drawable/ic_trash_can" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/EditBudgetItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RemoveBudgetItemButton"
        app:layout_constraintTop_toBottomOf="@+id/budgetRecyclerView"
        app:srcCompat="@drawable/ic_pencil" />

</androidx.constraintlayout.widget.ConstraintLayout>